--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://kowshikreddy137.github.io/stackline_assesment/",
   "name": "stackline-product",
   "version": "0.1.0",
   "private": true,
